@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-04-14T22:30:30Z",
-  "count_outdated" : 77,
-  "uniques_outdated" : 60,
+  "timestamp" : "2024-04-24T00:59:10Z",
+  "count_outdated" : 78,
+  "uniques_outdated" : 61,
   "count" : 79,
   "uniques" : 62,
   "clones" : [
-    {
-      "timestamp": "2024-04-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-04-14T00:00:00Z",
       "count": 1,
